--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@tailwindcss/vite": "^4.1.10",
     "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
     "pinia": "^3.0.1",
+    "tailwindcss": "^4.1.10",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0",
-    "vuetify": "^3.8.0-beta.0"
+    "vue-chartjs": "^5.3.2",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.1",
